# athena

./: Cargo.toml
debug/: Cargo.toml
debug/src/: main.rs  nodes.rs
src/: array_init.rs  lib.rs  matrix.rs  scalar.rs  serde.rs  vector.rs
src/ga/: line.rs  mod.rs  plane.rs  point.rs
src/pga/: line.rs  mod.rs  motor.rs  plane.rs  point.rs
src/pga/elements/: bivector.rs  mod.rs  pseudo.rs  scalar.rs  trivector.rs  vector.rs
src/simd/: aarch64.rs  fallback.rs  mod.rs
src/vector/: elements.rs  mod.rs
