[package]
name = "athena"
version = "0.0.0"
edition = "2021"
description = "Athena is math crate tailored for game engines, rendering and physics simulations"
license = "MIT OR Apache-2.0"

[features]
std = []
default = ["std"]
serde = ["dep:serde"]

[dependencies]
serde = { version = "1.0", features = ["derive"], optional = true }

[workspace]
members = ["debug"]
